:lipstick: Entity > Charts > KPI > Fix alignment

--- a/src/components/ChartKPI/style.scoped.scss
+++ b/src/components/ChartKPI/style.scoped.scss
@@ -82,6 +82,10 @@
             }
         }
     }
+
+    .row--value {
+        align-self: start;
+    }
 }
 
 .label {
